// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow Manipulation init should fetch and initalize flow 1`] = `
AssetService {
  "channels": ChannelAssets {
    "assetType": "channel",
    "assets": Object {
      "6934255e-446b-40d3-b2ca-c5f801bd2278": Object {
        "content": Object {
          "address": "+12065550000",
          "roles": Array [
            "send",
            "receive",
          ],
          "schemes": Array [
            "tel",
          ],
        },
        "id": "6934255e-446b-40d3-b2ca-c5f801bd2278",
        "name": "Simulator",
        "type": "channel",
      },
    },
    "endpoint": "/channels",
    "idProperty": "uuid",
    "localStorage": true,
  },
  "fields": FieldAssets {
    "assetType": "field",
    "assets": Object {
      "name": Object {
        "id": "name",
        "name": "Name",
        "type": "property",
      },
      "unknown_field": Object {
        "id": "unknown_field",
        "name": "Unknown Field",
        "type": "field",
      },
    },
    "endpoint": "/assets/fields.json",
    "idProperty": "key",
    "localStorage": true,
  },
  "flows": FlowAssets {
    "assetType": "flow",
    "assets": Object {
      "boring": Object {
        "content": Object {
          "_ui": Object {
            "languages": Array [],
            "nodes": Object {
              "node0": Object {
                "position": Object {
                  "bottom": 254,
                  "left": 0,
                  "right": 220,
                  "top": 0,
                },
              },
              "node1": Object {
                "position": Object {
                  "bottom": 370,
                  "left": 0,
                  "right": 220,
                  "top": 280,
                },
                "type": "wait_for_response",
              },
              "node2": Object {
                "position": Object {
                  "bottom": 498,
                  "left": 0,
                  "right": 220,
                  "top": 400,
                },
              },
              "node3": Object {
                "position": Object {
                  "bottom": 598,
                  "left": 0,
                  "right": 220,
                  "top": 520,
                },
              },
            },
            "stickies": Object {},
          },
          "language": "eng",
          "localization": Object {},
          "name": "Boring Flow",
          "nodes": Array [
            Object {
              "actions": Array [
                Object {
                  "text": "Hi there, this is your first action!",
                  "type": "send_msg",
                  "uuid": "node0_action0",
                },
                Object {
                  "groups": Array [
                    Object {
                      "name": "Flow Participants",
                      "uuid": "group_0",
                    },
                  ],
                  "type": "add_contact_groups",
                  "uuid": "node0_action1",
                },
                Object {
                  "groups": Array [
                    Object {
                      "name": "Nonresponsive",
                      "uuid": "group_1",
                    },
                  ],
                  "type": "remove_contact_groups",
                  "uuid": "node0_action2",
                },
              ],
              "exits": Array [
                Object {
                  "destination_node_uuid": "node1",
                  "name": null,
                  "uuid": "node0_exit0",
                },
              ],
              "uuid": "node0",
            },
            Object {
              "actions": Array [],
              "exits": Array [
                Object {
                  "destination_node_uuid": "node2",
                  "name": "Red",
                  "uuid": "node1_exit0",
                },
                Object {
                  "destination_node_uuid": "node2",
                  "name": "Green",
                  "uuid": "node1_exit1",
                },
                Object {
                  "destination_node_uuid": "node2",
                  "name": "Other",
                  "uuid": "node1_exit2",
                },
              ],
              "router": Object {
                "cases": Array [
                  Object {
                    "arguments": Array [
                      "red",
                    ],
                    "exit_uuid": "node1_exit0",
                    "type": "has_any_word",
                    "uuid": "node1_case0",
                  },
                  Object {
                    "arguments": Array [
                      "green",
                    ],
                    "exit_uuid": "node1_exit1",
                    "type": "has_any_word",
                    "uuid": "node1_case1",
                  },
                ],
                "default_exit_uuid": "node1_exit2",
                "operand": "@run.input",
                "result_name": "color",
                "type": "switch",
              },
              "uuid": "node1",
              "wait": Object {
                "type": "msg",
              },
            },
            Object {
              "actions": Array [
                Object {
                  "text": "This has been really great.",
                  "type": "send_msg",
                  "uuid": "node2_action0",
                },
                Object {
                  "field": Object {
                    "key": "unknown_field",
                    "name": "Unknown Field",
                  },
                  "type": "set_contact_field",
                  "uuid": "node2_action1",
                  "value": "Some Value",
                },
              ],
              "exits": Array [
                Object {
                  "destination_node_uuid": "node3",
                  "name": null,
                  "uuid": "node2_exit0",
                },
              ],
              "uuid": "node2",
            },
            Object {
              "actions": Array [
                Object {
                  "text": "Thanks for playing!",
                  "type": "send_msg",
                  "uuid": "node3_action0",
                },
              ],
              "exits": Array [
                Object {
                  "destination_node_uuid": null,
                  "name": null,
                  "uuid": "node3_exit0",
                },
              ],
              "uuid": "node3",
            },
          ],
          "uuid": "boring",
        },
        "id": "boring",
        "name": "Boring",
        "type": "flow",
      },
    },
    "endpoint": "/assets/flows.json",
    "idProperty": "uuid",
    "localStorage": true,
  },
  "groups": GroupAssets {
    "assetType": "group",
    "assets": Object {
      "group_0": Object {
        "id": "group_0",
        "name": "Flow Participants",
        "type": "group",
      },
      "group_1": Object {
        "id": "group_1",
        "name": "Nonresponsive",
        "type": "group",
      },
    },
    "endpoint": "/assets/groups.json",
    "idProperty": "uuid",
    "localStorage": true,
  },
}
`;

exports[`Flow Manipulation init should fetch and initalize flow 2`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation init should initialize definition: nodes 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation node editor normal editing should generate a suggested result name 1`] = `
Array [
  "UPDATE_RESULT_NAME",
  Object {
    "resultName": "Result 1",
  },
]
`;

exports[`Flow Manipulation nodes removal should remove node node0: Remove node0 1`] = `
Object {
  "node1": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node1: Remove node1 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node2": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node2_exit0": "node2",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node2: Remove node2 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node3",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node3",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node3",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node3": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "Thanks for playing!",
          "type": "send_msg",
          "uuid": "node3_action0",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node3_exit0",
        },
      ],
      "uuid": "node3",
    },
    "ui": Object {
      "position": Object {
        "bottom": 598,
        "left": 0,
        "right": 220,
        "top": 520,
      },
    },
  },
}
`;

exports[`Flow Manipulation nodes removal should remove node node3: Remove node3 1`] = `
Object {
  "node0": Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "text": "Hi there, this is your first action!",
          "type": "send_msg",
          "uuid": "node0_action0",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Flow Participants",
              "uuid": "group_0",
            },
          ],
          "type": "add_contact_groups",
          "uuid": "node0_action1",
        },
        Object {
          "groups": Array [
            Object {
              "name": "Nonresponsive",
              "uuid": "group_1",
            },
          ],
          "type": "remove_contact_groups",
          "uuid": "node0_action2",
        },
        Object {
          "labels": Array [
            Object {
              "name": "Help",
              "uuid": "label_0",
            },
            Object {
              "name": "Feedback",
              "uuid": "label_1",
            },
          ],
          "type": "add_input_labels",
          "uuid": "node0_action3",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": "node1",
          "name": null,
          "uuid": "node0_exit0",
        },
      ],
      "uuid": "node0",
    },
    "ui": Object {
      "position": Object {
        "bottom": 254,
        "left": 0,
        "right": 220,
        "top": 0,
      },
    },
  },
  "node1": Object {
    "inboundConnections": Object {
      "node0_exit0": "node0",
    },
    "node": Object {
      "actions": Array [],
      "exits": Array [
        Object {
          "destination_node_uuid": "node2",
          "name": "Red",
          "uuid": "node1_exit0",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Green",
          "uuid": "node1_exit1",
        },
        Object {
          "destination_node_uuid": "node2",
          "name": "Other",
          "uuid": "node1_exit2",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "red",
            ],
            "exit_uuid": "uuid_node1_exit0",
            "type": "has_any_word",
            "uuid": "node1_case0",
          },
          Object {
            "arguments": Array [
              "green",
            ],
            "exit_uuid": "uuid_node1_exit1",
            "type": "has_any_word",
            "uuid": "node1_case1",
          },
        ],
        "default_exit_uuid": "node1_exit2",
        "operand": "@run.input",
        "result_name": "color",
        "type": "switch",
      },
      "uuid": "node1",
      "wait": Object {
        "type": "msg",
      },
    },
    "ui": Object {
      "position": Object {
        "bottom": 370,
        "left": 0,
        "right": 220,
        "top": 280,
      },
      "type": "wait_for_response",
    },
  },
  "node2": Object {
    "inboundConnections": Object {
      "node1_exit0": "node1",
      "node1_exit1": "node1",
      "node1_exit2": "node1",
    },
    "node": Object {
      "actions": Array [
        Object {
          "text": "This has been really great.",
          "type": "send_msg",
          "uuid": "node2_action0",
        },
        Object {
          "field": Object {
            "key": "unknown_field",
            "name": "Unknown Field",
          },
          "type": "set_contact_field",
          "uuid": "node2_action1",
          "value": "Some Value",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": null,
          "uuid": "node2_exit0",
        },
      ],
      "uuid": "node2",
    },
    "ui": Object {
      "position": Object {
        "bottom": 498,
        "left": 0,
        "right": 220,
        "top": 400,
      },
    },
  },
}
`;
